# screeps

./: .editorconfig  .eslint.json  .eslintrc.js  .gitignore  .jshintrc  .prettierrc  .screeps.json  Gruntfile.js  brain.autoplanner.js  brain.guard.js  docker-compose.yml  main.js  package-lock.json  package.json  role.attacker.js  role.builder.js  role.carrier.js  role.claimer.js  role.harvester.js  role.healer.js  role.invaderdestroyer.js  role.manager.js  role.miner.js  role.multiroom-harvester.js  role.relay.js  role.remoteharvester.js  role.repairer.js  role.scientist.js  role.tmpdeliver.js  role.tower.js  role.upgrader.js  rollup.config.js  screeps.config.json  task.depositmaterials.js  task.gather.js  task.renew.js  task.repaircreep.js  tool.creepupgrader.js  tool.energysource.js  tsconfig.json  (+1 more)
docker/: README.md
patches/: screeps-pathfinding+2.0.8.patch
rust-wasm-test/: Cargo.toml
rust-wasm-test/benches/: room_position_collection.rs
rust-wasm-test/src/: lib.rs  position_collections.rs
src/: brain.autoplanner.js  brain.autoplanner.ts  brain.guard.js  brain.guard.ts  brain.highwayharvesting.js  brain.highwayharvesting.ts  brain.logistics.js  brain.logistics.ts  brain.offense.js  brain.offense.ts  jobs.ts  main.js  main.ts  observequeue.ts  powercreep.ligma.js  powercreep.ligma.ts  remotemining.ts  role.attacker.js  role.builder.js  role.carrier.js  role.claimer.js  role.harvester.js  role.healer.js  role.invaderdestroyer.js  role.manager.js  role.miner.js  role.nextroomer.js  role.relay.js  role.remoteharvester.js  role.repairer.js  role.scientist.js  (+31 more)
(+63 files in other folders)
