[package]
name = "rust-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.9"

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "1"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[[bench]]
name = "room_position_collection"
harness = false
